# Daem0n-Chat

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-macos.yml
.planning/: ROADMAP.md  STATE.md
daem0nmcp/: __init__.py  active_context.py  auto_detect.py  cli.py  communities.py  config.py  context_manager.py  covenant.py  emotion_detect.py  entity_extractor.py  entity_manager.py  mcp_instance.py  memory.py  models.py  qdrant_store.py  retrieval_router.py  server.py  similarity.py  style_detect.py  temporal.py  vectors.py
daem0nmcp/cognitive/: debate.py  evolve.py  simulate.py
daem0nmcp/dreaming/: persistence.py  scheduler.py  strategies.py
daem0nmcp/graph/: entity_resolver.py  knowledge_graph.py
daem0nmcp/migrations/: schema.py
daem0nmcp/reflexion/: __init__.py  consolidation.py
daem0nmcp/tools/: __init__.py  briefing.py  cognitive_tools.py  daem0n_briefing.py  daem0n_forget.py  daem0n_profile.py  daem0n_recall.py  daem0n_reflect.py  daem0n_relate.py  daem0n_remember.py  daem0n_status.py  entity_tools.py  graph_tools.py  maintenance.py  memory.py  rules.py  temporal.py  verification.py  workflows.py
daem0nmcp/transforms/: covenant.py
docs/: index.html
installer/: __init__.py  build_inno.py  build_macos.py  build_mcpb.py  config_manager.py  health_check.py  icon.py  icon_needed.txt  manifest.json  model_downloader.py  post_install.py
tests/: conftest.py  test_auto_detect.py  test_backward_compat.py  test_bitemporal_integration.py  test_bootstrap.py  test_build_inno.py  test_cli.py  test_cognitive_debate.py  test_cognitive_evolve.py  test_cognitive_simulate.py  test_communities.py  test_compact.py  test_context.py  test_covenant.py  test_covenant_integration.py  test_covenant_transform.py  test_daem0n_tools.py  test_dream_integration.py  test_dream_strategies.py  test_entity_extraction.py  test_fts5.py  test_full_covenant_flow.py  test_graph.py  test_graphrag.py  test_installer.py  test_knowledge_graph_personal.py  test_llm_compat.py  test_memory.py  test_ops.py  test_pending_outcome_resolver.py  test_performance_ux.py  test_similarity.py  test_temporal.py  test_temporal_evolution.py  test_user_isolation.py  test_workflow_commune.py  test_workflow_consult.py  test_workflow_explore.py  test_workflow_govern.py  test_workflow_inscribe.py  (+3 more)
(+52 files in other folders)
