[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daem0nmcp"
version = "1.0.0"
description = "DaemonChat - Persistent conversational memory for Claude Desktop"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DasBluEyedDevil"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=3.0.0b1",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",  # Required for SQLAlchemy async
    "pydantic-settings>=2.0.0",
    # Web ingestion
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    # Vector embeddings
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    # Vector database
    "qdrant-client>=1.7.0",
    # BM25 for hybrid retrieval
    "rank-bm25>=0.2.2",
    # GraphRAG
    "networkx>=3.0",
    "leidenalg>=0.10.0",
    "python-igraph>=0.11.0",
    # Metacognitive Architecture (Reflexion)
    "langgraph>=1.0.7",
    "langgraph-checkpoint-sqlite>=3.0.3",
    # Context Engineering
    "llmlingua>=0.2.2",
    "tiktoken>=0.5.0",
    # ONNX Runtime for faster embeddings
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
tracing = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
installer = [
    "claude-desktop-config>=0.2.0",
]

[project.scripts]
daem0nmcp = "daem0nmcp.server:main"
daem0nchat = "daem0nmcp.server:main"

[project.urls]
Homepage = "https://github.com/DasBluEyedDevil/Daem0n-Chat"
Repository = "https://github.com/DasBluEyedDevil/Daem0n-Chat"

[tool.setuptools.packages.find]
where = ["."]
include = ["daem0nmcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
